# 2th-class

SiAOD_51/: CMakeLists.txt  file_3a.txt  result_3a.txt  result_3b.txt  task_1a.cpp  task_1b.cpp  task_1c.cpp  task_2a.cpp  task_2b.cpp  task_2c.cpp  task_3a.cpp  task_3b.cpp
SiAOD_52/: CMakeLists.txt  task_1.cpp
