cmake_minimum_required(VERSION 3.29)
project(SiAOD_51)

set(CMAKE_CXX_STANDARD 20)

add_executable(task_1a task_1a.cpp)
add_executable(task_1b task_1b.cpp)
add_executable(task_1c task_1c.cpp)
add_executable(task_2a task_2a.cpp)
add_executable(task_2b task_2b.cpp)
add_executable(task_2c task_2c.cpp)
add_executable(task_3a task_3a.cpp)
add_executable(task_3b task_3b.cpp)